<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title">Title</string>
    <string name="duration_text">Duration</string>
    <string name="release_text">Release</string>
    <string name="release">00–00–00</string>
    <string name="duration">0h 0m</string>
    <string name="genre">Genre List</string>
    <string name="genre_text">Genre</string>
    <string name="overview_text">Overview</string>
    <string name="overview">Overview</string>
    <string name="score">0</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_favorites">Favorites</string>
    <string name="no_favorite_yet">No favorite yet</string>
</resources>