<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@color/maroon"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:fadingEdge="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="155dp"
                android:text="@string/title"
                android:fontFamily="@font/poppins_bold"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:lineHeight="24dp"
                app:autoSizeTextType="uniform"/>

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="155dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/circle_shape">

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/score"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="22sp"
                        android:textColor="@color/maroon"
                        app:autoSizeTextType="uniform"/>
                </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:background="@drawable/rounded_shape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="215dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="25dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_text"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="15sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration_text"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="15sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre_text"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_genres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="15sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_poster"
                        android:layout_width="130dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="25dp"
                        android:elevation="5dp"
                        android:src="@color/maroon"
                        card_view:shapeAppearanceOverlay="@style/RoundSquare"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_text"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_bookmark_border_24"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"/>
    </RelativeLayout>
</ScrollView>